--- a/index.html
+++ b/index.html
@@ -5,220 +5,248 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Show Today — Бронирование</title>
   <style>
-    /* жёлтый фон на всю страницу */
+    /* ---- Цветовая палитра ---- */
+    :root {
+      --color-primary: #0042FF;
+      --color-accent:  #FFEB00;
+      --color-bg:      #0D0D0D;
+      --color-light:   #FFFFFF;
+      --step-width:    360px;
+    }
+
+    /* ---- Сброс базовых стилей ---- */
+    * { box-sizing: border-box; margin:0; padding:0; }
     body {
-      margin: 0;
-      font-family: sans-serif;
-      background: #FFEB3B;
-      color: #333;
+      font-family: 'Segoe UI', sans-serif;
+      background: var(--color-bg) url('Классика фон.png') center/cover fixed;
+      color: var(--color-light);
+      min-height: 100vh;
+      display: flex; align-items: center; justify-content: center;
     }
-    header {
-      background: #ffffff;
-      padding: 20px;
+
+    /* ---- Карточка формы ---- */
+    .card {
+      width: var(--step-width);
+      background: rgba(0,0,0,0.8);
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.6);
+    }
+    .card header {
+      background: var(--color-accent);
       text-align: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      padding: 16px;
     }
-    header img {
-      height: 60px;
+    .card header img {
+      max-height: 56px;
     }
-    main {
+    .card main {
       padding: 20px;
-      max-width: 500px;
-      margin: 40px auto;
-      background: #fff;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      border-radius: 8px;
     }
     fieldset {
-      margin: 0;
-      padding: 0;
       border: none;
-      display: none; /* по умолчанию скрываем */
+      display: none;
+      animation: fadeIn 0.3s ease both;
     }
-    fieldset.active {
-      display: block;
-    }
+    fieldset.active { display: block; }
     legend {
-      font-weight: bold;
-      margin-bottom: 8px;
+      font-size: 1.1rem;
+      margin-bottom: 12px;
+      color: var(--color-accent);
     }
     label {
       display: block;
       margin-bottom: 10px;
+      font-size: 0.95rem;
     }
-    input, select, button, textarea {
+    input[type="text"],
+    input[type="date"],
+    input[type="time"],
+    input[type="number"],
+    select,
+    textarea {
       width: 100%;
-      padding: 8px;
-      margin-top: 4px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      font-size: 16px;
-      box-sizing: border-box;
+      padding: 8px 10px;
+      border: 1px solid rgba(255,255,255,0.3);
+      border-radius: 6px;
+      background: rgba(255,255,255,0.1);
+      color: var(--color-light);
+      font-size: 1rem;
     }
-    button {
-      background: #007AFF;
-      color: #fff;
-      border: none;
-      padding: 12px;
-      font-weight: bold;
-      cursor: pointer;
-      font-size: 16px;
-    }
-    button:disabled {
-      background: #ccc;
-      cursor: default;
+    input:focus,
+    select:focus,
+    textarea:focus {
+      outline: none;
+      border-color: var(--color-primary);
     }
     .actions {
-      text-align: right;
-      margin-top: 10px;
+      display: flex;
+      justify-content: space-between;
+      margin-top: 16px;
     }
-    .actions button + button {
-      margin-left: 8px;
+    button {
+      flex: 1;
+      padding: 10px 14px;
+      border: none;
+      border-radius: 6px;
+      font-size: 1rem;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.2s ease;
     }
+    button + button { margin-left: 8px; }
+    .btn-next {
+      background: var(--color-primary);
+      color: var(--color-light);
+    }
+    .btn-next:hover { background: #0035cc; }
+    .btn-prev {
+      background: rgba(255,255,255,0.2);
+      color: var(--color-light);
+    }
+    .btn-prev:hover { background: rgba(255,255,255,0.3); }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to   { opacity: 1; transform: translateY(0); }
+    }
+
+    /* ---- Финальный экран ---- */
+    .thankyou {
+      text-align: center;
+      padding: 40px 20px;
+      font-size: 1.1rem;
+      line-height: 1.5;
+    }
+
   </style>
 </head>
 <body>
 
-<header>
-  <!-- поправьте имя файла под своё -->
-  <img src="logo.png" alt="Show Today Logo">
-</header>
+  <div class="card">
+    <header>
+      <img src="logo.png" alt="Show Today">
+    </header>
+    <main>
+      <form id="wizard">
 
-<main>
-  <form id="wizard-form">
+        <!-- Шаг 1 -->
+        <fieldset class="step active" data-step="1">
+          <legend>1. Выберите формат</legend>
+          <label><input type="radio" name="mode" value="studio" required> В студии</label>
+          <label><input type="radio" name="mode" value="outdoor"> Выезд</label>
+          <div class="actions">
+            <button type="button" class="btn-next" data-next="2">Далее →</button>
+          </div>
+        </fieldset>
 
-    <!-- ШАГ 1: формат -->
-    <fieldset class="step active" data-step="1">
-      <legend>Выберите формат</legend>
-      <label>
-        <input type="radio" name="mode" value="studio" required>
-        В студии
-      </label>
-      <label>
-        <input type="radio" name="mode" value="outdoor">
-        Выезд
-      </label>
-      <div class="actions">
-        <button type="button" id="next-1">Продолжить →</button>
-      </div>
-    </fieldset>
+        <!-- Шаг 2 -->
+        <fieldset class="step" data-step="2">
+          <legend>2. Дата и время</legend>
+          <label>Дата: <input type="date" name="date" required></label>
+          <label>Время: <input type="time" name="time" required></label>
+          <div class="actions">
+            <button type="button" class="btn-prev" data-prev="1">← Назад</button>
+            <button type="button" class="btn-next" data-next="3">Далее →</button>
+          </div>
+        </fieldset>
 
-    <!-- ШАГ 2: дата и время -->
-    <fieldset class="step" data-step="2">
-      <legend>Дата и время</legend>
-      <label>Дата:
-        <input type="date" name="date" required>
-      </label>
-      <label>Время:
-        <input type="time" name="time" required>
-      </label>
-      <div class="actions">
-        <button type="button" id="prev-2">← Назад</button>
-        <button type="button" id="next-2">Продолжить →</button>
-      </div>
-    </fieldset>
+        <!-- Шаг 3 -->
+        <fieldset class="step" data-step="3">
+          <legend>3. Подробности</legend>
+          <label>Кол-во человек: <input type="number" name="count" min="1" required></label>
+          <label id="address-row" style="display:none;">
+            Адрес (выезд): <input type="text" name="address">
+          </label>
+          <label>Программа:
+            <select name="program" required>
+              <option value="">— выберите —</option>
+              <option value="classic">Классика</option>
+              <option value="musicality">Musicality</option>
+              <option value="battle">Battle Show</option>
+              <option value="lotto">Музыкальное лото</option>
+              <option value="kids">Детский формат</option>
+              <option value="quiz">Квиз-мафия</option>
+              <option value="21plus">21+</option>
+            </select>
+          </label>
+          <label>Средний возраст: <input type="number" name="age" min="1" required></label>
+          <label>Повод праздника: <textarea name="occasion" rows="2" required></textarea></label>
+          <div class="actions">
+            <button type="button" class="btn-prev" data-prev="2">← Назад</button>
+            <button type="button" class="btn-next" data-next="4">Далее →</button>
+          </div>
+        </fieldset>
 
-    <!-- ШАГ 3: подробности -->
-    <fieldset class="step" data-step="3">
-      <legend>Подробности</legend>
-      <label>Количество человек:
-        <input type="number" name="count" min="1" required>
-      </label>
-      <label id="address-label" style="display:none;">
-        Адрес (для выезда):
-        <input type="text" name="address">
-      </label>
-      <label>Программа:
-        <select name="program" required>
-          <option value="">— выберите —</option>
-          <option value="classic">Классика</option>
-          <option value="musicality">Musicality</option>
-          <option value="battle">Battle Show</option>
-          <option value="lotto">Музыкальное лото</option>
-          <option value="kids">Детский формат</option>
-          <option value="quiz">Квиз-мафия</option>
-          <option value="21plus">Формат 21+</option>
-        </select>
-      </label>
-      <label>Средний возраст участников:
-        <input type="number" name="age" min="1" required>
-      </label>
-      <label>Сколько раз были на нашем шоу:
-        <input type="number" name="visits" min="0" required>
-      </label>
-      <label>Повод праздника:
-        <textarea name="occasion" rows="2" required></textarea>
-      </label>
-      <div class="actions">
-        <button type="button" id="prev-3">← Назад</button>
-        <button type="button" id="next-3">Продолжить →</button>
-      </div>
-    </fieldset>
+        <!-- Шаг 4: подтверждение -->
+        <fieldset class="step" data-step="4">
+          <legend>4. Подтверждение</legend>
+          <p>Проверьте всё ещё раз и нажмите «Записаться».</p>
+          <div class="actions">
+            <button type="button" class="btn-prev" data-prev="3">← Назад</button>
+            <button type="submit" class="btn-next">Записаться</button>
+          </div>
+        </fieldset>
 
-    <!-- ШАГ 4: подтверждение -->
-    <fieldset class="step" data-step="4">
-      <legend>Подтверждение</legend>
-      <p>Проверьте введённые данные и нажмите «Записаться».</p>
-      <div class="actions">
-        <button type="button" id="prev-4">← Назад</button>
-        <button type="submit" id="submit-btn">Записаться</button>
-      </div>
-    </fieldset>
+      </form>
+    </main>
+  </div>
 
-  </form>
-</main>
+  <script>
+    // WebApp API
+    const tg = window.Telegram?.WebApp;
+    if (tg) tg.expand();
 
-<script>
-  // Telegram WebApp API
-  const tg = window.Telegram?.WebApp;
-  if (tg) { tg.expand(); }
+    // Логика мастера
+    const steps = document.querySelectorAll('.step');
+    function showStep(n) {
+      steps.forEach(f => f.classList.remove('active'));
+      document.querySelector(`.step[data-step="${n}"]`).classList.add('active');
+      window.scrollTo(0, 0);
+    }
 
-  // Переключение шагов
-  const steps = Array.from(document.querySelectorAll('.step'));
-  function showStep(n) {
-    steps.forEach(f => f.classList.remove('active'));
-    document.querySelector(`.step[data-step="${n}"]`).classList.add('active');
-  }
-
-  document.getElementById('next-1').onclick = () => {
-    showStep(2);
-  };
-  document.getElementById('prev-2').onclick = () => showStep(1);
-  document.getElementById('next-2').onclick = () => showStep(3);
-  document.getElementById('prev-3').onclick = () => showStep(2);
-  document.getElementById('next-3').onclick = () => showStep(4);
-  document.getElementById('prev-4').onclick = () => showStep(3);
-
-  // Показ/скрытие поля «Адрес» на шаге 3
-  const modeRadios = document.querySelectorAll('input[name="mode"]');
-  const addressLabel = document.getElementById('address-label');
-  modeRadios.forEach(r => {
-    r.addEventListener('change', () => {
-      const show = r.value === 'outdoor' && r.checked;
-      addressLabel.style.display = show ? 'block' : 'none';
-      addressLabel.querySelector('input').required = show;
+    // Кнопки Далее и Назад
+    document.querySelectorAll('.btn-next').forEach(btn => {
+      btn.addEventListener('click', e => {
+        e.preventDefault();
+        const next = btn.dataset.next;
+        // проверка валидации текущего fieldset
+        const cur = btn.closest('fieldset');
+        if (btn.type==='submit' || cur.checkValidity()) {
+          if (btn.type==='submit') {
+            // отправка данных
+            const data = Object.fromEntries(new FormData(cur.form).entries());
+            tg?.sendData(JSON.stringify({action:'booking',payload:data}));
+            // заменить карту на благодарность
+            document.querySelector('.card').innerHTML = 
+              `<div class="thankyou">
+                 Спасибо!<br>С вами свяжется администратор или ведущий.
+               </div>`;
+          } else {
+            showStep(next);
+          }
+        } else {
+          cur.reportValidity();
+        }
+      });
     });
-  });
+    document.querySelectorAll('.btn-prev').forEach(btn => {
+      btn.addEventListener('click', e => {
+        e.preventDefault();
+        showStep(btn.dataset.prev);
+      });
+    });
 
-  // Отправка формы
-  document.getElementById('wizard-form').addEventListener('submit', e => {
-    e.preventDefault();
-    const data = Object.fromEntries(new FormData(e.target).entries());
-    const payload = {
-      action: 'booking',
-      timestamp: Date.now(),
-      payload: data
-    };
-    tg?.sendData(JSON.stringify(payload));
-
-    // Замена содержимого на «Спасибо!»
-    document.querySelector('main').innerHTML =
-      `<p style="text-align:center; margin:60px 0; font-size:18px;">
-         Спасибо!<br>
-         С вами свяжется администратор или ведущий для уточнения деталей.
-       </p>`;
-  });
-</script>
+    // Показ адреса при выезде
+    document.querySelectorAll('input[name="mode"]').forEach(r => {
+      r.addEventListener('change', ()=> {
+        const show = r.value==='outdoor' && r.checked;
+        document.getElementById('address-row').style.display = show? 'block':'none';
+        document.querySelector('input[name="address"]').required = show;
+      });
+    });
+  </script>
 
 </body>
 </html>
+
